# elfcopyflat

./: Cargo.toml  README.md
src/: elf.rs  main.rs
