[package]
name = "elfcopyflat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
clap-num = "1.0.2"
zerocopy = { version = "0.7.5", features = ["derive"] }
